修改openshift下flink配置的切割符